--- a/pages.css
+++ b/pages.css
@@ -10,6 +10,8 @@ body {
     flex-direction: column;
     text-align: center;
     color: white;
+    background-image: linear-gradient(to right, #008ba3, #5C2FC2);
+
 }
 
 h1 {
